Prepare for publishing

--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
   "name": "react-native-honeywell-scanner",
+  "description": "A barcode scanner for Honeywell handheld devices like Honeywell Dolphin CT50",
   "version": "0.0.1",
   "main": "index.js",
   "author": "Kees Kluskens <kees@volst.nl>",
-  "license": "MIT",
+  "repository": "Volst/react-native-honeywell-scanner",
+  "keywords": [
+    "honeywell",
+    "barcode",
+    "scanner"
+  ],
+  "engines": {
+    "node": ">=4.0"
+  },
+  "license": "ISC",
   "private": false
 }
